# TikCanvas

./: .gitignore  CMakeLists.txt  README.md
resources/: dark.qss  light.qss  resources.qrc
resources/i18n/: tikcanvas_en.ts  tikcanvas_ru.qm  tikcanvas_ru.ts
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
src/core/: BackupManager.cpp  BackupManager.h  ErrorAdvisor.cpp  ErrorAdvisor.h  I18n.cpp  I18n.h  MikroTikManager.cpp  MikroTikManager.h  MndpScanner.cpp  MndpScanner.h  PdfRenderer.cpp  PdfRenderer.h  ProjectFile.cpp  ProjectFile.h  SshLauncher.cpp  SshLauncher.h  SyslogServer.cpp  SyslogServer.h  Vectorizer.cpp  Vectorizer.h
src/widgets/: DeviceConfigDialog.cpp  DeviceConfigDialog.h  DeviceListWidget.h  MapCanvas.cpp  MapCanvas.h
